--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <li class="advantage">
               <div class="icon-container">
                 <svg class="advantages-icon">
-                  <use href="images/sprite.svg#icon-antenna"></use>
+                  <use href="images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="advantages-heading">Увага до деталей</h3>
@@ -56,7 +56,7 @@
             <li class="advantage">
               <div class="icon-container">
                 <svg class="advantages-icon">
-                  <use href="images/sprite.svg#icon-clock"></use>
+                  <use href="images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="advantages-heading">Пунктуальность</h3>
@@ -68,7 +68,7 @@
             <li class="advantage">
               <div class="icon-container">
                 <svg class="advantages-icon">
-                  <use href="images/sprite.svg#icon-diagram"></use>
+                  <use href="images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="advantages-heading">Планування</h3>
@@ -79,7 +79,7 @@
             <li class="advantage">
               <div class="icon-container">
                 <svg class="advantages-icon">
-                  <use href="images/sprite.svg#icon-astronaut"></use>
+                  <use href="images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="advantages-heading">Сучасні технології</h3>
@@ -119,28 +119,28 @@
               <li class="social-media-icon">
                 <a href="" class="link-style-none sm-link">
                   <svg class="sm-icon">
-                    <use href="images/sprite.svg#icon-instagram"></use>
+                    <use href="images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-media-icon">
                 <a href="" class="link-style-none sm-link">
                   <svg class="sm-icon">
-                    <use href="images/sprite.svg#icon-twitter"></use>
+                    <use href="images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-media-icon">
                 <a href="" class="link-style-none sm-link">
                   <svg class="sm-icon">
-                    <use href="images/sprite.svg#icon-facebook"></use>
+                    <use href="images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-media-icon">
                 <a href="" class="link-style-none sm-link">
                   <svg class="sm-icon">
-                    <use href="images/sprite.svg#icon-linkedin"></use>
+                    <use href="images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
@@ -154,28 +154,28 @@
               <li class="social-media-icon">
                 <a href="" class="link-style-none sm-link">
                   <svg class="sm-icon">
-                    <use href="images/sprite.svg#icon-instagram"></use>
+                    <use href="images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-media-icon">
                 <a href="" class="link-style-none sm-link">
                   <svg class="sm-icon">
-                    <use href="images/sprite.svg#icon-twitter"></use>
+                    <use href="images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-media-icon">
                 <a href="" class="link-style-none sm-link">
                   <svg class="sm-icon">
-                    <use href="images/sprite.svg#icon-facebook"></use>
+                    <use href="images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-media-icon">
                 <a href="" class="link-style-none sm-link">
                   <svg class="sm-icon">
-                    <use href="images/sprite.svg#icon-linkedin"></use>
+                    <use href="images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
@@ -189,28 +189,28 @@
               <li class="social-media-icon">
                 <a href="" class="link-style-none sm-link">
                   <svg class="sm-icon">
-                    <use href="images/sprite.svg#icon-instagram"></use>
+                    <use href="images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-media-icon">
                 <a href="" class="link-style-none sm-link">
                   <svg class="sm-icon">
-                    <use href="images/sprite.svg#icon-twitter"></use>
+                    <use href="images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-media-icon">
                 <a href="" class="link-style-none sm-link">
                   <svg class="sm-icon">
-                    <use href="images/sprite.svg#icon-facebook"></use>
+                    <use href="images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-media-icon">
                 <a href="" class="link-style-none sm-link">
                   <svg class="sm-icon">
-                    <use href="images/sprite.svg#icon-linkedin"></use>
+                    <use href="images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
@@ -224,28 +224,28 @@
               <li class="social-media-icon">
                 <a href="" class="link-style-none sm-link">
                   <svg class="sm-icon">
-                    <use href="images/sprite.svg#icon-instagram"></use>
+                    <use href="imicons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-media-icon">
                 <a href="" class="link-style-none sm-link">
                   <svg class="sm-icon">
-                    <use href="images/sprite.svg#icon-twitter"></use>
+                    <use href="images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-media-icon">
                 <a href="" class="link-style-none sm-link">
                   <svg class="sm-icon">
-                    <use href="images/sprite.svg#icon-facebook"></use>
+                    <use href="images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="social-media-icon">
                 <a href="" class="link-style-none sm-link">
                   <svg class="sm-icon">
-                    <use href="images/sprite.svg#icon-linkedin"></use>
+                    <use href="images/icons.svg#icon-linkedin"></use>
                   </svg>
                 </a>
               </li>
@@ -261,42 +261,42 @@
             <li class="clients">
               <a href="" class="client-link">
                 <svg class="client">
-                  <use href="images/sprite.svg#icon-client_1"></use>
+                  <use href="images/icons.svg#icon-client_1"></use>
                 </svg>
               </a>
             </li>
             <li class="clients">
               <a href="" class="client-link">
                 <svg class="client">
-                  <use href="images/sprite.svg#icon-client_2"></use>
+                  <use href="images/icons.svg#icon-client_2"></use>
                 </svg>
               </a>
             </li>
             <li class="clients">
               <a href="" class="client-link">
                 <svg class="client">
-                  <use href="images/sprite.svg#icon-client_3"></use>
+                  <use href="images/icons.svg#icon-client_3"></use>
                 </svg>
               </a>
             </li>
             <li class="clients">
               <a href="" class="client-link">
                 <svg class="client">
-                  <use href="images/sprite.svg#icon-client_4"></use>
+                  <use href="images/icons.svg#icon-client_4"></use>
                 </svg>
               </a>
             </li>
             <li class="clients">
               <a href="" class="client-link">
                 <svg class="client">
-                  <use href="images/sprite.svg#icon-client_5"></use>
+                  <use href="images/icons.svg#icon-client_5"></use>
                 </svg>
               </a>
             </li>
             <li class="clients">
               <a href="" class="client-link">
                 <svg class="client">
-                  <use href="images/sprite.svg#icon-client_6"></use>
+                  <use href="images/icons.svg#icon-client_6"></use>
                 </svg>
               </a>
             </li>
@@ -322,28 +322,28 @@
             <li class="social-media-icon">
               <a href="" class="link-style-none sm-link-footer">
                 <svg class="sm-icon">
-                  <use href="images/sprite.svg#icon-instagram"></use>
+                  <use href="images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-icon">
               <a href="" class="link-style-none sm-link-footer">
                 <svg class="sm-icon">
-                  <use href="images/sprite.svg#icon-twitter"></use>
+                  <use href="images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-icon">
               <a href="" class="link-style-none sm-link-footer">
                 <svg class="sm-icon">
-                  <use href="images/sprite.svg#icon-facebook"></use>
+                  <use href="images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-icon">
               <a href="" class="link-style-none sm-link-footer">
                 <svg class="sm-icon">
-                  <use href="images/sprite.svg#icon-linkedin"></use>
+                  <use href="images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
