--- a/portfolio.html
+++ b/portfolio.html
@@ -145,28 +145,28 @@
             <li class="social-media-icon">
               <a href="" class="link-style-none sm-link-footer">
                 <svg class="sm-icon">
-                  <use href="images/sprite.svg#icon-instagram"></use>
+                  <use href="images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-icon">
               <a href="" class="link-style-none sm-link-footer">
                 <svg class="sm-icon">
-                  <use href="images/sprite.svg#icon-twitter"></use>
+                  <use href="images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-icon">
               <a href="" class="link-style-none sm-link-footer">
                 <svg class="sm-icon">
-                  <use href="images/sprite.svg#icon-facebook"></use>
+                  <use href="images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-icon">
               <a href="" class="link-style-none sm-link-footer">
                 <svg class="sm-icon">
-                  <use href="images/sprite.svg#icon-linkedin"></use>
+                  <use href="images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
