--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
               <li class="social-media-icon">
                 <a href="" class="link-style-none sm-link">
                   <svg class="sm-icon">
-                    <use href="imicons.svg#icon-instagram"></use>
+                    <use href="images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
