--- a/portfolio.html
+++ b/portfolio.html
@@ -24,8 +24,16 @@
             </ul>
           </nav>
           <ul class="list-style-none nav-main">
-            <li class="menu-item"><a href="mailto:info@devstudio.com" class="link-style-none contact-link">info@devstudio.com</a></li>
-            <li class="menu-item"><a href="tel:+380961111111" class="link-style-none contact-link">+38 096 111 11 11</a></li>
+            <li class="menu-item">
+              <svg class="icon-header" width="16" height="12">
+                <use href="images/icons.svg#icon-envelope"></use>
+              </svg>
+              <a href="mailto:info@devstudio.com" class="link-style-none contact-link">info@devstudio.com</a></li>
+            <li class="menu-item phone-link">
+              <svg class="icon-header" width="10" height="16">
+                <use href="images/icons.svg#icon-smartphone"></use>
+              </svg>
+              <a href="tel:+380961111111" class="link-style-none contact-link">+38 096 111 11 11</a></li>
           </ul>
         </div>
   </div>
@@ -60,7 +68,7 @@
                 <div>
             </a> 
             </li>
-            <li>
+            <li class="gallery-images">
               <a href="#" class="link-style-none">
                 <img src="images/portfolio-3.jpg" alt="Ресторан Seafood" width="370">
                 <div class="gallery-border">
@@ -140,32 +148,32 @@
         </address>
       </div>
         <div class="footer-section">
-          <h3 class="sm-footer">приєднуйтесь</h3>
+          <p class="sm-footer">приєднуйтесь</p>
           <ul class="list-style-none social-links-footer">
             <li class="social-media-icon">
               <a href="" class="link-style-none sm-link-footer">
-                <svg class="sm-icon">
+                <svg class="sm-icon-footer">
                   <use href="images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-icon">
               <a href="" class="link-style-none sm-link-footer">
-                <svg class="sm-icon">
+                <svg class="sm-icon-footer">
                   <use href="images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-icon">
               <a href="" class="link-style-none sm-link-footer">
-                <svg class="sm-icon">
+                <svg class="sm-icon-footer">
                   <use href="images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-icon">
               <a href="" class="link-style-none sm-link-footer">
-                <svg class="sm-icon">
+                <svg class="sm-icon-footer">
                   <use href="images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
