--- a/index.html
+++ b/index.html
@@ -24,11 +24,19 @@
               </ul>
             </nav>
             <ul class="list-style-none nav-main">
-              <li class="menu-item"><a href="mailto:info@devstudio.com" class="link-style-none contact-link">info@devstudio.com</a></li>
-              <li class="menu-item"><a href="tel:+380961111111" class="link-style-none contact-link">+38 096 111 11 11</a></li>
+              <li class="menu-item">
+                <svg class="icon-header" width="16" height="12">
+                  <use href="images/icons.svg#icon-envelope"></use>
+                </svg>
+                <a href="mailto:info@devstudio.com" class="link-style-none contact-link">info@devstudio.com</a></li>
+              <li class="menu-item phone-link">
+                <svg class="icon-header" width="10" height="16">
+                  <use href="images/icons.svg#icon-smartphone"></use>
+                </svg>
+                <a href="tel:+380961111111" class="link-style-none contact-link">+38 096 111 11 11</a></li>
             </ul>
           </div>
-    </div>
+        </div>        
     </header>
     <main>
       <section class="hero">
@@ -317,32 +325,32 @@
         </address>
       </div>
         <div class="footer-section">
-          <h3 class="sm-footer">приєднуйтесь</h3>
+          <p class="sm-footer">приєднуйтесь</p>
           <ul class="list-style-none social-links-footer">
             <li class="social-media-icon">
               <a href="" class="link-style-none sm-link-footer">
-                <svg class="sm-icon">
+                <svg class="sm-icon-footer">
                   <use href="images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-icon">
               <a href="" class="link-style-none sm-link-footer">
-                <svg class="sm-icon">
+                <svg class="sm-icon-footer">
                   <use href="images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-icon">
               <a href="" class="link-style-none sm-link-footer">
-                <svg class="sm-icon">
+                <svg class="sm-icon-footer">
                   <use href="images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-media-icon">
               <a href="" class="link-style-none sm-link-footer">
-                <svg class="sm-icon">
+                <svg class="sm-icon-footer">
                   <use href="images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
