--- a/portfolio.html
+++ b/portfolio.html
@@ -65,8 +65,8 @@
                 <div class="gallery-border">
                   <h2 class="gallery-heading">Постер New Orlean vs Golden Star</h2>
                   <p class="gallery-item-name">Дизайн</p>
-                <div>
-            </a> 
+                </div>
+              </a> 
             </li>
             <li class="gallery-images">
               <a href="#" class="link-style-none">
