--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="uk">
   <head>
     <meta charset="UTF-8">
@@ -24,16 +24,18 @@
               </ul>
             </nav>
             <ul class="list-style-none nav-main">
-              <li class="menu-item">
-                <svg class="icon-header" width="16" height="12">
-                  <use href="images/icons.svg#icon-envelope"></use>
-                </svg>
-                <a href="mailto:info@devstudio.com" class="link-style-none contact-link">info@devstudio.com</a></li>
               <li class="menu-item phone-link">
-                <svg class="icon-header" width="10" height="16">
-                  <use href="images/icons.svg#icon-smartphone"></use>
-                </svg>
-                <a href="tel:+380961111111" class="link-style-none contact-link">+38 096 111 11 11</a></li>
+                <a href="mailto:info@devstudio.com" class="link-style-none contact-link">
+                  <svg class="icon-header" width="16" height="12">
+                    <use href="images/icons.svg#icon-envelope"></use>
+                  </svg>
+                  info@devstudio.com</a></li>
+              <li class="menu-item phone-link">
+                <a href="tel:+380961111111" class="link-style-none contact-link">
+                  <svg class="icon-header" width="10" height="16">
+                    <use href="images/icons.svg#icon-smartphone"></use>
+                  </svg>
+                  +38 096 111 11 11</a></li>
             </ul>
           </div>
         </div>        
